--- a/style.css
+++ b/style.css
@@ -2495,3 +2495,24 @@ img-fluid-servicios {
         display: none;
     }
 }
+
+.logomaintop {
+    display: none;
+}
+
+
+
+
+.btn:focus, .btn:active, button:focus, button:active {
+    outline: none !important;
+    box-shadow: none !important;
+  }
+  
+  #image-gallery .modal-footer{
+    display: block;
+  }
+  
+  .thumb{
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
