--- a/style.css
+++ b/style.css
@@ -2516,3 +2516,21 @@ img-fluid-servicios {
     margin-top: 15px;
     margin-bottom: 15px;
   }
+
+  .container-iframe {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio */
+  }
+  
+  .responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
